# chronologer

./: LICENSE  README.md  environment.yml  index.rst  pyproject.toml  setup.py
chronologer/: __init__.py  calcurves.py  calibration.py  distributions.py  pymccarbon.py
chronologer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  index.rst  introduction.rst  modules.rst  tutorial.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
examples/: example.py  testing_caldist.py
notebooks/: density_model.ipynb  ipp_model.ipynb  test_drive.ipynb  tutorialnb.ipynb
src/chronologer/: __init__.py  calcurves.py  calibration.py  distributions.py  models.py  pymccarbon.py  utils.py
src/chronologer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/chronologer/calcurves/: intcal20_cache.csv
